--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="fruits.png" alt="FRUITS">
+            <img src="https://placehold.co/200x200/00BCD4/FFF?text=FRUITS" alt="FRUITS">
         </div>
         <div class="nav-links">
             <a href="#" onclick="showSection('sakums')">SĀKUMS</a>
