--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRUITS</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <img src="https://placehold.co/200x200/00BCD4/FFF?text=FRUITS" alt="FRUITS">
+            <img src="FRUITS.png" alt="FRUITS">
         </div>
         <div class="nav-links">
             <a href="#" onclick="showSection('sakums')">SĀKUMS</a>
@@ -26,9 +29,29 @@
     <main>
         <section id="sakums" class="section">
             <div class="main-slide">
-                <h1>FRUITS - Jūsu Veselīgā Izvēle</h1>
-                <p class="main-text">Atklājiet garšu un veselības pasauli ar mūsu svaigajiem augļiem</p>
-            </div>
+                <h1>FRUITS </h1>
+                <p class="main-text">Veselība sākas ar svaigiem augļiem</p>
+                <div id="mainslide2">Laipni lūdzam vietnē Fruits! 
+                    
+                Fruits ir tava galvenā vieta, kur atklāt svaigus, gardus un veselīgus augļus, kas nāk no dabas. Mēs piedāvājam plašu augļu izvēli, lai tu varētu baudīt vislabāko no katra augļa, vienlaikus rūpējoties par savu veselību.
+                </div>
+                <div id="flex">
+                <div class="main-slide5"> Kāpēc izvēlēties augļus? </div>
+                <div class="main-slide6"> Ko mēs piedāvājam? </div>
+                </div>
+                
+                <div id="flex">
+<div id="mainslide">
+Veselība: Augļi ir dabiski bagāti ar vitamīniem un minerālvielām, kas palīdz uzturēt tavu ķermeni veselīgu.
+Svaigums: Mēs piedāvājam tikai visaugstākās kvalitātes augļus, kas ir svaigi un gatavi baudīšanai.
+Dabas dāvana: Izvēlies augļus no vietējiem dārziem, kas audzēti ilgtspējīgā un videi draudzīgā veidā.
+    </div>                
+               <div id="mainslide3">
+
+                   Plaša augļu izvēle: Āboli, ķirši, apelsīni, ananasi, avenes un vēl daudz vairāk!
+                   Kvalitāte un svaigums: Mēs garantējam, ka katrs auglis ir svaigs, garšīgs un pieejams tieši laikā.
+                   </div>     
+                </div>
         </section>
 
         <section id="par-mums" class="section">
